--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ body {
 }
 
 .banner {
+  color: white;
   background: url('./mind-blown.jpg') 50% 100% no-repeat;
   width: 100vw;
   height: calc(100vh);
@@ -31,7 +32,6 @@ body {
 
 h1 {
   font-family: 'Panic';
-  color: white;
   font-size: 6rem;
   line-height: 4rem;
   text-shadow: 0 0 2rem black;
@@ -41,7 +41,40 @@ h1 {
 
 h1 span {
   font-family: 'RobotoSerif';
-  color: white;
   font-size: 2.5rem;
   margin: 0;
+}
+
+footer {
+  font-size: 1rem;
+  position: fixed;
+  bottom: 0;
+  width: 95%;
+  display: flex;
+  justify-content: space-between;
+  text-shadow: 0 0 1rem black;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 5rem;
+    line-height: 5rem;
+  }
+
+  h1 span {
+    font-size: 2.5rem;
+  }
+
+  footer {
+    font-size: 0.8rem;
+  }
 }
