--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ body {
 a {
   color: white;
   text-decoration: none;
+  cursor: pointer;
 }
 
 header {
@@ -79,7 +80,7 @@ footer {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  text-shadow: 0 0 1rem black;
+  text-shadow: 0 0 0.4rem black;
 }
 
 footer a:hover {
@@ -95,13 +96,17 @@ footer p:last-child {
 }
 
 @media screen and (max-width: 768px) {
+  header {
+    font-size: 1.25rem;
+  }
+
   h1 {
     font-size: 5.5rem;
     line-height: 5.5rem;
   }
 
   h1 span {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   footer {
