--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,5 @@
+/* HOME PAGE */
+
 @font-face {
   font-family: 'Panic';
   src: url('../fonts/Panic.ttf') format('truetype');
@@ -15,6 +17,10 @@
 body {
   font-family: 'RobotoSerif';
   margin: 0;
+}
+
+body > * {
+  box-sizing: border-box;
 }
 
 a {
@@ -49,7 +55,7 @@ header a:hover {
   color: white;
   background: url('../img/mind-blown.jpg') 50% 100% no-repeat;
   width: 100vw;
-  height: calc(100vh);
+  height: 100vh;
   background-size: auto 115%;
   overflow: hidden;
   display: grid;
@@ -75,8 +81,6 @@ h1 span {
 
 footer {
   font-size: 1rem;
-  position: fixed;
-  bottom: 0;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -116,4 +120,56 @@ footer p:last-child {
   footer {
     font-size: 0.8rem;
   }
+}
+
+/* HOME PAGE */
+
+main.repeat {
+  background-repeat: repeat-y;
+  background-size: 115%;
+  grid-template: auto 1fr auto / 1fr;
+  height: auto;
+}
+
+section {
+  background-color: #202271;
+  border-radius: 1rem;
+  margin: 2rem 3vw;
+  padding: 3rem 4vw;
+}
+
+section h1 {
+  font-size: 4rem;
+  grid-column: 1 / -1;
+}
+
+.coffee-grid {
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1.5rem;
+}
+
+article {
+  background-color: #CB687D;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+article h2 {
+  margin: 0.5em 0 0.3rem 0;
+}
+
+article p {
+  font-weight: 300;
+  margin: 0 0 0.75em 0;
+}
+
+article img {
+  height: auto;
+  width: 100%;
+  overflow: hidden;
 }
