--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,13 @@
 @font-face {
   font-family: 'RobotoSerif';
   src: url('../fonts/RobotoSerif.ttf') format('truetype');
-  font-weight: 600;
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'RobotoSerif';
+  src: url('../fonts/RobotoSerif.ttf') format('truetype');
+  font-weight: 700;
   font-style: normal;
 }
 
@@ -103,6 +109,64 @@ footer p:last-child {
   padding-right: 3vw;
 }
 
+/* HOME PAGE */
+
+main.repeat {
+  background: url('../img/mind-blown.jpg') no-repeat;
+  background-repeat: repeat-y;
+  background-size: contain;
+  grid-template: auto 1fr auto / 1fr;
+  height: auto;
+}
+
+section {
+  background-color: #202271;
+  border-radius: 1rem;
+  margin: 2rem 3vw;
+  padding: 4vw;
+}
+
+section h1 {
+  font-size: 4rem;
+  grid-column: 1 / -1;
+}
+
+.coffee-grid {
+  padding-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1.5rem;
+}
+
+a.grid-item {
+  background-color: #CB687D;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+a.grid-item h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0.5em 0 0.3rem 0;
+}
+
+a.grid-item p {
+  color:rgba(255, 255, 255, 0.8);
+  margin: 0 0 0.75em 0;
+}
+
+a.grid-item img {
+  height: auto;
+  width: 100%;
+  overflow: hidden;
+}
+
+
+/* MEDIA QUERIES */
+
 @media screen and (max-width: 768px) {
   header {
     font-size: 1.25rem;
@@ -120,56 +184,22 @@ footer p:last-child {
   footer {
     font-size: 0.8rem;
   }
+
+  section {
+    padding-top: 2rem;
+  }
+
+  section h1 {
+    font-size: 3.25rem;
+  }
+
+  .coffee-grid {
+    padding-top: 1rem;
+  }
 }
 
-/* HOME PAGE */
-
-main.repeat {
-  background-repeat: repeat-y;
-  background-size: 115%;
-  grid-template: auto 1fr auto / 1fr;
-  height: auto;
-}
-
-section {
-  background-color: #202271;
-  border-radius: 1rem;
-  margin: 2rem 3vw;
-  padding: 3rem 4vw;
-}
-
-section h1 {
-  font-size: 4rem;
-  grid-column: 1 / -1;
-}
-
-.coffee-grid {
-  padding: 2rem 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 1.5rem;
-}
-
-article {
-  background-color: #CB687D;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-article h2 {
-  margin: 0.5em 0 0.3rem 0;
-}
-
-article p {
-  font-weight: 300;
-  margin: 0 0 0.75em 0;
-}
-
-article img {
-  height: auto;
-  width: 100%;
-  overflow: hidden;
+@media screen and (max-width: 480px) {
+  section h1 {
+    font-size: 2.8rem;
+  }
 }
