--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,7 +65,7 @@ header a:hover {
   background-size: auto 115%;
   overflow: hidden;
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template: auto 1fr auto / 1fr;
   align-items: center;
   justify-content: center;
 }
@@ -109,21 +109,21 @@ footer p:last-child {
   padding-right: 3vw;
 }
 
-/* HOME PAGE */
+/* COFFEE PAGE */
 
 main.repeat {
   background: url('../img/mind-blown.jpg') no-repeat;
   background-repeat: repeat-y;
   background-size: contain;
-  grid-template: auto 1fr auto / 1fr;
+  width: auto;
   height: auto;
 }
 
 section {
-  background-color: #202271;
+  background-color: rgba(32, 34, 113, 0.92);
   border-radius: 1rem;
   margin: 2rem 3vw;
-  padding: 4vw;
+  padding: 3rem 4vw;
 }
 
 section h1 {
@@ -132,7 +132,7 @@ section h1 {
 }
 
 .coffee-grid {
-  padding-top: 3rem;
+  padding-top: 2rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1.5rem;
@@ -164,8 +164,31 @@ a.grid-item img {
   overflow: hidden;
 }
 
+/* CONTACT PAGE */
+
+section.contact-section {
+  text-align: center;
+  padding-bottom: 1rem;
+  margin: auto;
+}
+
+section.contact-section h1 {
+  font-size: 4rem;
+  padding-bottom: 1.5rem;
+}
+
+section.contact-section p {
+  font-size: 1.5rem;
+  line-height: 1.75rem;
+}
 
 /* MEDIA QUERIES */
+
+@media screen and (max-width: 1100px) {
+  section.contact-section {
+    margin: 2rem 3vw;
+  }
+}
 
 @media screen and (max-width: 768px) {
   header {
@@ -196,10 +219,32 @@ a.grid-item img {
   .coffee-grid {
     padding-top: 1rem;
   }
+
+  section.contact-section h1 {
+    font-size: 3rem;
+    padding-bottom: 0;
+  }
+
+  section.contact-section p {
+    font-size: 1.25rem;
+  }
+  
 }
 
 @media screen and (max-width: 480px) {
   section h1 {
     font-size: 2.8rem;
+  }
+
+  h1.contact-heading {
+    font-size: 3rem;
+  }
+
+  section.contact-section h1 {
+    font-size: 2.5rem;
+  }
+
+  section.contact-section p {
+    font-size: 1rem;
   }
 }
