--- a/src/css/style.css
+++ b/src/css/style.css
@@ -107,7 +107,7 @@ footer p:last-child {
 
 /* COFFEE PAGE */
 
-main.repeat {
+.banner.repeat {
   background: url('../img/mind-blown.jpg') no-repeat;
   background-repeat: repeat-y;
   background-size: contain;
@@ -115,14 +115,14 @@ main.repeat {
   height: auto;
 }
 
-section {
+section.page-section {
   background-color: rgba(32, 34, 113, 0.92);
   border-radius: 1rem;
   margin: 2rem 3vw;
   padding: 3rem 4vw;
 }
 
-section h1 {
+section.page-section h1 {
   font-size: 4rem;
   grid-column: 1 / -1;
 }
@@ -205,11 +205,11 @@ section.contact-section p {
     font-size: 0.8rem;
   }
 
-  section {
+  section.page-section {
     padding-top: 2rem;
   }
 
-  section h1 {
+  section.page-section h1 {
     font-size: 3.25rem;
   }
 
@@ -229,7 +229,7 @@ section.contact-section p {
 }
 
 @media screen and (max-width: 480px) {
-  section h1 {
+  section.page-section h1 {
     font-size: 2.8rem;
   }
 
