--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,7 +52,7 @@ header a {
   transition: all 0.25s ease-in-out;
 }
 
-header a:hover, header a.active-btn {
+header a:hover {
   color: #EFDA2A;
   background-color: rgba(0, 0, 0, 1);
 }
